# xpert-lib

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  HISTORY.md  LICENSE  README.md  TASKS.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml
engine/: docker-compose.yml  nitter.conf
src/xpert/: __init__.py  __main__.py  circuit_breaker.py  config.py  cookies.py  exporters.py  media.py  rate_limiter.py  scraper.py  selectors.py
src/xpert_cli/: __init__.py  cli.py
tasks/: lessons.md  todo.md
tests/: __init__.py  conftest.py  test_circuit_breaker.py  test_cli.py  test_cli_commands.py  test_cli_security.py  test_comprehensive.py  test_config.py  test_cookies.py  test_dataclasses.py  test_exporters.py  test_integration.py  test_multi_account.py  test_output_error.py  test_real_world_simulation.py  test_scraper.py  test_scraper_improvements.py  test_scraper_mocked.py  test_scraper_parsing.py  test_search_filters.py
