[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpert"
version = "1.0.0"
description = "Access X data without the API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Xpert Team", email = "team@xpert.io"}]
keywords = ["twitter", "x", "scraper", "data", "api", "nitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Pinned for reproducibility. pip-audit in CI catches CVEs in these.
    "httpx[http2]==0.24.1",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    "pandas==2.3.3",
    "openpyxl==3.1.5",
    "click==8.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]

[project.scripts]
xpert = "xpert_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
